appId: com.brandonkimble.cravesearch
---
- extendedWaitUntil: { visible: 'What are you craving?', timeout: 20000 }
- tapOn: 'Show best restaurants here'
- extendedWaitUntil: { visible: 'Close results', timeout: 25000 }
- waitForAnimationToEnd: { timeout: 2500 }
- tapOn: { id: 'search-segment-toggle' }
- waitForAnimationToEnd: { timeout: 4000 }
